--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,8 +7,6 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
 
-
-
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_photos"
         android:layout_width="match_parent"
@@ -20,6 +18,6 @@
         android:paddingTop="16dp"
         android:scrollbarStyle="outsideOverlay"
         android:scrollbars="vertical"
-        android:visibility="gone" />
+        android:visibility="visible" />
 </FrameLayout>
 
