--- a/app/src/main/res/layout/row_photo.xml
+++ b/app/src/main/res/layout/row_photo.xml
@@ -1,14 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/cv_row_song"
+<ImageView android:id="@+id/ivPhoto"
+    android:src="@drawable/placeholder"
     android:layout_width="match_parent"
-    android:layout_height="60dp"
-    android:layout_margin="10dp"
-    android:elevation="4dp">
-
-    <ImageView
-        android:id="@+id/ivPhoto"
-        android:layout_width="match_parent"
-        android:layout_height="300dp" />
-
-</android.support.v7.widget.CardView>
+    android:layout_height="300dp"
+    android:elevation="4dp"
+    xmlns:android="http://schemas.android.com/apk/res/android" />
