--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,6 +31,7 @@
                 android:layout_weight=".5"
                 android:background="@android:color/white"
                 android:hint="Search"
+                android:maxLines="1"
                 android:padding="16dp"
                 android:textColor="@color/colorAccent"
                 android:textColorHint="@color/colorAccent" />
