--- a/app/src/main/res/layout/row_photo.xml
+++ b/app/src/main/res/layout/row_photo.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView android:id="@+id/ivPhoto"
-    android:src="@drawable/placeholder"
-    android:layout_width="match_parent"
-    android:layout_height="300dp"
-    android:elevation="4dp"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+           android:id="@+id/ivPhoto"
+           android:layout_width="match_parent"
+           android:layout_height="300dp"
+           android:elevation="4dp"
+           android:padding="16dp"
+           android:src="@drawable/placeholder"/>
